# otrta-client

./: .gitignore  README.md  docker-compose-production.yaml  docker-compose.yaml
crates/: Cargo.toml  Dockerfile.client
crates/.sqlx/: query-021feafd450f96b1f0b98480916a1642c7ee958c82071d66e5197d1955942c59.json  query-03324becd8b6e71665dc63618a304bd0c6fdcfdfb2a64108155bdd390c6a8310.json  query-087f9396f8ea2f3a8ffa735d50c8762c904fb7a676f629f5338902565c32915e.json  query-0b02255724496a666ba027c26986e0be21547c596c5f85640bc859922b5342d6.json  query-0d09225ac84f188085276849848f91c87402365ef4292ca6e009a2045d3705fb.json  query-0da3786dad9ffce17ccc5fb1a6de6ad8b8912ba5a3909fc007c75b3477afe886.json  query-0fc5bdb50b13e3b8b1c1b9c8496aa61df4b6e6be9d05a140dd89259ae14eacbb.json  query-0fe848495d0426452edfe19347998b48c514fd5c4ec95f598f38e1056f76a614.json  query-12acefb0a88d93f55f0eaffa494407d783782da646b36094e82172a16cc13f0a.json  query-12c582ad13263e1d4c08c0564af7dad498e1157ce96ed41a1c47bd5617b40af1.json  query-12cef2eeb3e029cab2e1cae6fa054c0f98f1f161eada14f8c4e6961542750297.json  query-17176114b229ab819275d40d8c1a66bef0160828a8cc1f3cc68443795f932877.json  query-1757d36dbf2dddbaca04bccd8267ce48c439be768865663dd9bdc268565172fe.json  query-17c9e828b8fc02bc4ffe47a19dce43800eb1da34369e40f0221d7ca6659ac7f5.json  query-19c518ee5919016d2ad96e6c8afce7eebb266f53dc2bf48f2ddf721935cc448c.json  query-1a22e20fbb6fa76979665cd85f57a5eb1e47f01707daa39f9e5bb5d3deddddce.json  query-1b964878b08d6dc7f2e1c71fcc33a25c2fe3af5d49c304b4670b86ed243c270a.json  query-1bc65af1a9785a3e2e8d028281dfce39f86f8bdb44e24e532119b62d37d24422.json  query-2064fb23ea882a85ee217b3256232710d6af5cb91d9f5d080b88d8bacac47cc3.json  query-22891b03920483e4abb35e4367d10bb5e8ab5718508eaae16a1f3672f0356f73.json  query-25133c2355a8fbae1528778bbd92942cd521d68f8c8c4a92200aa3042447c408.json  query-26302630d73fc33cf6193f70c759b0c1b6fc67c8bc18ba6d247d40c00c994cbf.json  query-27b528a3f4d25d54577d0783be8f9317f7e7ce61cc5edb1265a19c9d7869e3d2.json  query-28ad4efc1f1b0a6d8a1def410a7d78e5d6606c35b85d9d010f436d36e0785a93.json  query-30d34e74ac7cd6c4dcfc0524114671f61893ce01b15cf3022e7974c8c401104d.json  query-3162f939955a1e8f84656f306fe2f69dc01f5a9c262b3f7c600c5e1733a9c97d.json  query-33234b05d634a50425d5b50c5157d3048198a297a7a802b155cc9231536083c6.json  query-3483f51685ce79ffda2a1f7997cc5ab33b7217d5909cb53f446f3f7a820f4684.json  query-376027dec9873b13aaaf6eaf14c8c14b7b4018c94f60f5c4608f3b8c1b9c9a5e.json  query-3812d0e5439229802777c797fbd800e18058cebfef3de4900f3063234687fa40.json  query-3b80be6e57df4cb47112b13b2d02990e36363887a112eaa980d521888fa45970.json  query-3eb1cd9609cb28d7b697283a006be3040ef37678075184f8da7c7f4bcb6c969c.json  query-45ceba03389abcaf6ed0e0e25587e7c860f9a0b49cf044855f32fe08ff7f4a1c.json  query-5248df24acbe43dc37abc02d0961c5a0372020c8b21a564278c77942b1d4d4d5.json  query-531707441483880f5b6a3e0bff38340ab6911442bc97e6faa87c628a2621dd51.json  query-54f8cbec5c95ab9be6ddd9e356c40c2131f74867fca964b94f90de8215962b73.json  query-56d81745b2ca13b4290bab25f5ad3fdb7f3f0176bdf6e51ab1ae3234cfb4d094.json  query-59c780224a88e07318b80ba23f20ccb30e34177d911559ab1148e6bc8d2ccfc8.json  query-5a43a2b918274d2b072720b046b550bf6f53a18dc2d1b39d9f4e875ca45ba5db.json  query-5ab0b2b3c802ae728e5124b5e6a1711337fe5742f04eabce5e8b590eb86dc6db.json  (+74 more)
crates/otrta/: Cargo.toml
crates/otrta-cli/: Cargo.toml
crates/otrta-nostr/: Cargo.toml
crates/otrta-nostr/src/: lib.rs  nip91_discovery.rs
crates/otrta-ui/: .env.example  Cargo.toml  docker-compose.yaml  tor-setup.md
crates/otrta-ui/configuration/: base.yaml  production.yaml
crates/otrta-ui/migrations/: 20250115000001_create_models_table.down.sql  20250115000001_create_models_table.up.sql  20250115000002_create_mints_table.down.sql  20250115000002_create_mints_table.up.sql  20250115000003_create_user_search_groups_table.down.sql  20250115000003_create_user_search_groups_table.up.sql  20250115000004_create_user_searches_table.down.sql  20250115000004_create_user_searches_table.up.sql  20250115100000_create_api_keys_table.down.sql  20250115100000_create_api_keys_table.up.sql  20250122000002_add_provider_model_unique_constraint.down.sql  20250122000002_add_provider_model_unique_constraint.up.sql  20250128000001_update_provider_unique_constraint.down.sql  20250128000001_update_provider_unique_constraint.up.sql  20250128000002_update_mint_unique_constraint.down.sql  20250128000002_update_mint_unique_constraint.up.sql  20250129000001_add_search_status_tracking.down.sql  20250129000001_add_search_status_tracking.up.sql  20250130000001_create_mint_units_table.down.sql  20250130000001_create_mint_units_table.up.sql  20250130000002_remove_provider_url_constraint.down.sql  20250130000002_remove_provider_url_constraint.up.sql  20250130000003_create_providers_table.down.sql  20250130000003_create_providers_table.up.sql  20250131000001_create_model_pricing_table.down.sql  20250131000001_create_model_pricing_table.up.sql  20250627141617_provider.up.sql  20250627155756_add_custom_provider_flag.down.sql  20250627155756_add_custom_provider_flag.up.sql  20250630104046_add_provider_id_to_models.down.sql  20250630104046_add_provider_id_to_models.up.sql  20250701000001_add_model_architecture_fields.down.sql  20250701000001_add_model_architecture_fields.up.sql  20250701000002_add_cascade_delete_to_models.down.sql  20250701000002_add_cascade_delete_to_models.up.sql  20250701000003_add_api_key_id_to_transactions.down.sql  20250701000003_add_api_key_id_to_transactions.up.sql  20250701000004_create_users_table.up.sql  20250701000005_create_organizations_table.up.sql  20250701000007_populate_users_from_existing_data.down.sql  (+26 more)
crates/otrta-ui/src/: background.rs  connection.rs  main.rs
crates/otrta-wallet/: Cargo.toml  README.md
crates/otrta-wallet/examples/: nip60_demo.rs
crates/otrta-wallet/src/: error.rs  lib.rs  nip60.rs  wallet.rs
crates/otrta/.sqlx/: query-75de98ab2d09508f56f7c87eaeace859ad7a6f73c3e137f701176e23ff1ac8c0.json
crates/otrta/configuration/: local.yaml  (+1 more)
creates/: Cargo.toml
otrta/wallet/: Cargo.toml
(+195 files in other folders)
