[workspace]

resolver = "2"

members = [
    "otrta", "otrta-nostr", "otrta-ui"
]

[workspace.package]
edition = "2024"
version = "1.0.0"
authors = ["thefux <npub1ygjd597hdwu8larprmhj893d5p832j5mhejpx40ukezgudvayg9qeklajc>"]
license = "Apache-2.0"
repository = "https://github.com/ecash-402/ecash-402-routstr"
description = "llm ecash 402 payment"

[workspace.dependencies]
nostr = "0.43"

ecash-402-wallet = "0.1.23"
# ecash-402-wallet = {path = "../../ecash-402-wallet/crates/wallet/"}
