[workspace]

resolver = "2"

members = [
    "otrta", "otrta-cli", "otrta-ui", "otrta-wallet",
]

[workspace.package]
edition = "2024"
version = "1.0.0"
authors = ["thefux <npub1ygjd597hdwu8larprmhj893d5p832j5mhejpx40ukezgudvayg9qeklajc>"]
license = "Apache-2.0"
repository = "https://github.com/ecash-402/ecash-402-routstr"
description = "llm ecash 402 payment"

[workspace.dependencies]
tokio = {version = "1.44", features=["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde-aux = "4.7"
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3.31"
tokio-stream = "0.1.17"
ecash-402-wallet = "0.1.7"
# ecash-402-wallet = {path="../../ecash-402-wallet/"}

dotenv = "0.15"
config = "0.15"

derive_more = "2.0"
