[package]
name = "otrta-wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
derive_more = {version = "2.0", features = ["from"]}
cdk = { version="0.10", default-features = false, features = [] }
bip39 = { version = "2.1.0", features = ["rand"] }
home = "0.5.11"
base64 = "0.22"

# NIP-60 dependencies
nostr-sdk = { version = "0.42", features = ["nip44"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[dev-dependencies]
tracing-subscriber = "0.3"
serde_json = "1.0"

[[example]]
name = "nip60_demo"
path = "examples/nip60_demo.rs"
