[package]
name = "otrta"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bigdecimal = "0.4"
bip39 = { version = "2.1.0", features = ["rand"] }
cdk = { version = "0.11", default-features = false, features = ["wallet"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures-util = "0.3"
hex = "0.4"
nostr = "0.43"
nwc = "0.43"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
scraper = "0.20"
rust_decimal = { version = "1.33", features = ["serde-float"] }
secp256k1 = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal", "bigdecimal"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"
dashmap = "6.1"

# otrta-wallet = { path = "../otrta-wallet" }
otrta-nostr = { path = "../otrta-nostr" }

ecash-402-wallet.workspace = true
