[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
uuid = {workspace=true}
futures-util = {workspace=true}
chrono = {workspace=true}

dotenv={workspace=true}

rand = "0.9"
tempfile = "3.20"
sha2 = "0.10"
cashu = "0.9"
anyhow = "1.0"

derive_more = {version = "2.0", features = ["from"]}
cdk = { git = "https://github.com/cashubtc/cdk.git", branch = "main", default-features = false, features = ["wallet", "mint"] }
cdk-redb = { git = "https://github.com/cashubtc/cdk.git", branch = "main", default-features = false, features = ["wallet"] }
bip39 = { version = "2.1.0", features = ["rand"] }
home = "0.5.11"
